--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Roots
-Theme URI:          http://roots.io/
-Description:        Roots is a starting WordPress theme made for developers that's based on HTML5 Boilerplate and Bootstrap. <a href="https://github.com/retlehs/roots/contributors">Contribute on GitHub</a>
-Version:            6.5.0
-Author:             Ben Word
-Author URI:         http://benword.com/
+Theme Name:         M&C Saatchi Share
+Theme URI:          
+Description:         Based on the Roots theme by Ben Word based on HTML5 Boilerplate and Bootstrap. <a href="https://github.com/retlehs/roots/contributors">Contribute on GitHub</a>
+Version:            .7
+Author:             Sergio O'Farrill
+Author URI:         http://ofarrill.carbonmade.com/
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
